--- a/app/views/oauth/authorizations/new.html.haml
+++ b/app/views/oauth/authorizations/new.html.haml
@@ -44,7 +44,7 @@
               .column
                 %small
                   - if @pre_auth.client.application.official
-                    %i.green.checked.icon
+                    %i.green.check.icon
                     Owned and operated by the transientBug team
                   - else
                     %i.ban.icon
