fix markup with auth page width to be properly proportioned

--- a/app/views/oauth/authorizations/new.html.haml
+++ b/app/views/oauth/authorizations/new.html.haml
@@ -2,7 +2,7 @@
   Authorize "#{ @pre_auth.client.name }"
 
 - content_for :custom_grid do
-  .ui.stackable.center.aligned.grid
+  .ui.stackable.center.aligned.grid.container
     .ui.middle.aligned.row
       .six.wide.column
         .ui.segment
