--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -10,4 +10,4 @@
 = csrf_meta_tags
 
 = stylesheet_link_tag "public", media: "all", "data-turbolinks-track": "reload"
-= stylesheet_pack_tag "application"
+= stylesheet_pack_tag "public", media: "all", "data-turbolinks-track": "reload"
