try out converting https://www.tailwindtoolbox.com/templates/admin-template
now going to work on seeing if i can't simplify it a bit with css grid

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -4,6 +4,7 @@
     = render partial: "layouts/admin/head"
 
     = javascript_include_tag "admin", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
+    = javascript_pack_tag "admin", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
 
   %body{ class: [  controller_name, action_name ] }
     = render partial: "layouts/admin/body"
