scaffold and fill out some functionality around roles
adding in permissions and going to transition the existing policies
to use them and make an editing and creation interface for them as
well

--- a/app/views/admin/home/home.html.haml
+++ b/app/views/admin/home/home.html.haml
@@ -14,6 +14,7 @@
 
     .ui.list
       = link_to "invitations", admin_invitations_path, class: "item"
+      = link_to "roles", admin_roles_path, class: "item"
       = link_to "users", admin_users_path, class: "item"
 
   .column
