--- a/app/javascript/styles/admin.scss
+++ b/app/javascript/styles/admin.scss
@@ -208,24 +208,24 @@ body.admin {
       }
 
       ul.sidebar-nav-list {
-        @apply flex flex-row py-0 px-1 text-center;
+        @apply flex flex-row py-0 px-0 text-center;
 
         @screen md {
-          @apply flex-col py-3 px-2 text-left;
+          @apply flex-col text-left;
         }
 
         & > li.sidebar-nav-item {
-          @apply mr-3 flex-1;
+          @apply flex-1;
 
           & > * {
-            @apply block py-1 pl-1 align-middle text-white no-underline border-b-2 border-red-800;
+            @apply block px-2 align-middle text-white no-underline border-b border-gray-500;
 
             @screen md {
               @apply py-3;
             }
 
             &:hover {
-              @apply text-white border-white bg-red-800 inner-shadow;
+              @apply text-white border-white bg-red-800 shadow-inner;
             }
           }
         }
