--- a/app/views/layouts/admin-tailwind.html.haml
+++ b/app/views/layouts/admin-tailwind.html.haml
@@ -48,10 +48,12 @@
                   %path{ d: "M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" }
 
               .navbar-dropdown.hidden
-                %a.navbar-dropdown-item{ href: "#" } Profile
-                %a.navbar-dropdown-item{ href: "#" } Settings
+                = content_for :navbar_dropdown
+                - if content_for? :navbar_dropdown
+                  .navbar-dropdown-divider
+                = link_to "Exit Admin", root_path, class: "navbar-dropdown-item"
                 .navbar-dropdown-divider
-                %a.navbar-dropdown-item{ href: "#" } Exit Admin
+                = link_to "Logout", logout_path, class: "navbar-dropdown-item"
 
     .content-and-sidebar
       %aside.sidebar
