--- a/app/views/admin/roles/_form.html.haml
+++ b/app/views/admin/roles/_form.html.haml
@@ -1,10 +1,22 @@
-= form_for @admin_role do |f|
-  - if @admin_role.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@admin_role.errors.count, "error")} prohibited this admin_role from being saved:"
+= form_with model: role, scope: :role, url: admin_role_path(role), html: { class: "ui fluid form" } do |f|
+  - if role.errors.any?
+    .ui.message.error
+      %h2= "#{ pluralize role.errors.count, "error" } prohibited this role from being saved:"
       %ul
-        - @admin_role.errors.full_messages.each do |message|
+        - role.errors.full_messages.each do |message|
           %li= message
 
-  .actions
-    = f.submit 'Save'
+  %h4.ui.dividing.header basic info 
+
+  .required.field
+    = f.label :name
+    = f.text_field :name, aria: { describedby: "role name" }
+
+  %h4.ui.dividing.header permissions
+
+  .field
+    .ui.checkbox
+      = f.collection_check_boxes :permission_ids, Permission.all, :id, :name
+      -#= f.label :permissions
+
+  = f.submit "save", class: "ui positive right floated submit button"
