--- a/app/javascript/styles/admin.scss
+++ b/app/javascript/styles/admin.scss
@@ -232,3 +232,33 @@ aside.sidebar {
     }
   }
 }
+
+.flash {
+  @apply border-l-4 p-4;
+
+  &.notice {
+    @apply bg-blue-100 border-blue-500 text-blue-700;
+  }
+
+  &.alert {
+    @apply bg-red-100 border-red-500 text-red-700;
+  }
+}
+
+table.fancy-table {
+  @apply w-full;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+
+  thead,
+  tbody {
+    display: contents;
+  }
+
+  td {
+    justify-items: left;
+    padding: 1rem 0.5rem;
+    border-bottom: solid 1px #f4f4f4;
+  }
+}
